[fix] zoom input and letter spacing

--- a/src/app/orderpage/orderpage.component.scss
+++ b/src/app/orderpage/orderpage.component.scss
@@ -1,7 +1,6 @@
 p {
   font-weight: bold;
   font-size: 20px;
-  letter-spacing: 0.444444px;
 }
 .pay-able {
   margin-top: 13px;
