--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -15,12 +15,10 @@ h2 {
   font-size: 20px;
   color: #22a45d !important;
   text-align: center;
-  letter-spacing: 0.444444px;
 }
 p {
   font-weight: bold;
   //font-size: 20px;
-  letter-spacing: 0.444444px;
 }
 .price {
   color: #22a45d;
@@ -33,7 +31,6 @@ img {
 .button-text {
   font-weight: bold;
   font-size: 20px;
-  letter-spacing: 0.444444px;
 }
 .button-stuff {
   transform: translate(-5%, -5%);
