--- a/src/app/ui-kit/bottom-tab-discount/bottom-tab-discount.component.scss
+++ b/src/app/ui-kit/bottom-tab-discount/bottom-tab-discount.component.scss
@@ -14,5 +14,4 @@ h2 {
 .button-text {
   font-weight: bold;
   font-size: 20px;
-  letter-spacing: 0.444444px;
 }
