--- a/src/app/ui-kit/categories/categories.component.scss
+++ b/src/app/ui-kit/categories/categories.component.scss
@@ -9,6 +9,5 @@ h2 {
   font-size: 18px;
   line-height: 32px;
   text-align: right;
-  letter-spacing: 0.14px;
   color: #010f07;
 }
