--- a/src/app/ui-kit/search-item/search-item.component.scss
+++ b/src/app/ui-kit/search-item/search-item.component.scss
@@ -17,7 +17,6 @@ p {
   font-size: 26px;
   text-align: center;
   line-height: 30px;
-  letter-spacing: 0.4;
   position: absolute;
   color: rgb(255, 255, 255);
   right: 50%;
