--- a/src/app/ui-kit/see-more/see-more.component.scss
+++ b/src/app/ui-kit/see-more/see-more.component.scss
@@ -2,7 +2,6 @@
   padding: 0;
 }
 p {
-  letter-spacing: -0.4px;
   font-weight: bold;
   color: #22a45d;
 }
