--- a/src/app/your-order/your-order.component.scss
+++ b/src/app/your-order/your-order.component.scss
@@ -2,7 +2,6 @@
   font-weight: bold;
   font-size: 20px;
   color: #868686;
-  letter-spacing: 0.444444px;
 }
 .in-progress-order {
   background-color: #fbfbfb;
@@ -23,7 +22,6 @@
   border-radius: 8px;
   margin-left: 11px;
   margin-bottom: 5px;
-  letter-spacing: -0.4px;
 }
 mat-icon {
   font-size: 16px;
@@ -34,7 +32,6 @@ mat-icon {
   color: #868686;
   font-style: normal;
   font-weight: bold;
-  letter-spacing: 0.444444px;
   font-size: 20px;
 }
 .status-recieved {
@@ -43,7 +40,6 @@ mat-icon {
   font-size: 16px;
   margin-right: 10px;
 
-  letter-spacing: -0.4px;
   background: rgba(255, 200, 0, 0.2);
   border-radius: 8px;
 }
